@@ -1,3 +1,4 @@
+*Removed the ability to combine storage discs of different species
 *Fixed sounds of the different glass types
 *Improved the JEI integration for the incubator
 +Feeding dinosaurs will now indicate success by green particles
